test/typechecker.d/invalid/fns0.souc.bad
n = 5

f(x: Integer): Integer = do
	if 4
		return 3
	return 3
